--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
+   <h2>Team Name: <%= @team %></h2>
+   <h3>Coach: <%= @coach %> </h3>
+   <h3>Point Guard: <%= @pg %> </h3>
+   <h3>Shooting Guard: <%= @sg %> </h3>
+   <h3>Small Forward: <%= @sf %> </h3>
+   <h3>Power Forward: <%= @pf %> </h3>
+   <h3>Center: <%= @c %> </h3>
 
  </body>
 </html>
-
-
